// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chore Renders a basic chore 1`] = `
<div
  className="chore"
>
  <span
    className="chore__title"
  >
    Test Chore
  </span>
  <div
    className="chore__bar"
  >
    <div
      className="chore__bar-inner"
      style={
        Object {
          "width": "0%",
        }
      }
    >
      <span
        className="chore__points"
      >
        0
      </span>
    </div>
  </div>
  <div
    className="chore__last-done"
  >
    Done: 
    18/02/2018
    <br />
    <span>
      Due: 
      <span
        className=""
      >
        19/02/2018
      </span>
    </span>
  </div>
  <button
    className="chore__complete-button"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="Mark as complete"
      src="check.svg"
    />
  </button>
  <PopUpMenu
    extraClasses="chore__extra-options"
    options={
      Array [
        Object {
          "text": "Edit",
          "to": "/chores/edit/test-chore",
          "type": "link",
        },
        Object {
          "onClick": [Function],
          "text": "Delete",
          "type": "button",
        },
        Object {
          "text": "I forgot to log this",
          "to": "/chores/log/test-chore",
          "type": "link",
        },
      ]
    }
    side="right"
  >
    <div
      className="chore__extra-icon"
    >
      <span
        className="chore__extra-icon-text"
      >
        …
      </span>
    </div>
  </PopUpMenu>
</div>
`;

exports[`Chore Renders a chore with frequency 0 1`] = `
<div
  className="chore"
>
  <span
    className="chore__title"
  >
    Test Chore
  </span>
  <div
    className="chore__bar"
  >
    <div
      className="chore__bar-inner"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <span
        className="chore__points"
      >
        100
      </span>
    </div>
  </div>
  <div
    className="chore__last-done"
  >
    Done: 
    18/02/2018
    <br />
  </div>
  <button
    className="chore__complete-button"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="Mark as complete"
      src="check.svg"
    />
  </button>
  <PopUpMenu
    extraClasses="chore__extra-options"
    options={
      Array [
        Object {
          "text": "Edit",
          "to": "/chores/edit/test-chore",
          "type": "link",
        },
        Object {
          "onClick": [Function],
          "text": "Delete",
          "type": "button",
        },
        Object {
          "text": "I forgot to log this",
          "to": "/chores/log/test-chore",
          "type": "link",
        },
      ]
    }
    side="right"
  >
    <div
      className="chore__extra-icon"
    >
      <span
        className="chore__extra-icon-text"
      >
        …
      </span>
    </div>
  </PopUpMenu>
</div>
`;
